@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Apply patch #1638868: Ident skills cover larger area with exp courtesy Aaron Baugher.
+ server/skills.c
+Nicolas Weeger 2007-06-03
+
 Fix uninitialized memory / invalid memory access.
  common/arch.c treasure.c
 Nicolas Weeger 2007-06-01
